--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-
-.ipynb_checkpoints/Implementation-checkpoint.ipynb
-.ipynb_checkpoints/sat_data-checkpoint.json
-.ipynb_checkpoints/sat_images-checkpoint.ipynb
+.ipynb_checkpoints/
 sat_images.ipynb
 .~Implementation.ipynb
